@@ -619,6 +619,11 @@ graphics_mode (void)
     pdf_doc_add_page_content(text_state.is_mb ? ">]TJ" : ")]TJ", 4);  /* op: TJ */
     /* continue */
   case TEXT_MODE:
+    if (text_state.bold_param != 0.0) {
+      /* fake-bold "2 Tr" is still active */
+      pdf_doc_add_page_content(" 0 Tr", 5);  /* op: Tr */
+      text_state.bold_param  = 0.0;
+    }
     pdf_doc_add_page_content(" ET", 3);  /* op: ET */
     text_state.force_reset =  0;
     text_state.font_id     = -1;
